--- a/JZ-main/LL/myproject/beer/templates/beer/ver_result.html
+++ b/JZ-main/LL/myproject/beer/templates/beer/ver_result.html
@@ -120,10 +120,8 @@
                 <div class="hotel-contain-right">
                     <h1>{{a.name}}</h1>
                     <div class="classfication">{{a.classfications}}</div>
-                    <div class="distance"></div>
-                    <div class="explain"></div>
-                    <p class="rate-and-review">👍{{a.rating}} {{a.distance}} {{a.address}}
-                        {{a.kind}} {{a.clean}} {{a.conv}}</p>
+                    <span>친절성:{{a.kind}}</span><span>청결성:{{a.clean}}</span><span>편의성:{{a.conv}}</span>
+                    <p class="rate-and-review">👍{{a.rating}} {{a.distance}} {{a.address}} </p>
                     <div class="hotel-cost">{{a.cost}}</div>
                     <input type="submit" value="찜하기">
                     </form>
@@ -263,10 +261,8 @@
                         <div class="hotel-contain-right">
                             <h1>{{a.name}}</h1>
                             <div class="classfication">{{a.classfications}}</div>
-                            <div class="distance"></div>
-                            <div class="explain"></div>
-                            <p class="rate-and-review">👍{{a.rating}} {{a.distance}} {{a.address}}
-                                {{a.kind}} {{a.clean}} {{a.conv}}</p>
+                            <span>친절성:{{a.kind}}</span><span>청결성:{{a.clean}}</span><span>편의성:{{a.conv}}</span>
+                            <p class="rate-and-review">👍{{a.rating}} {{a.distance}} {{a.address}} </p>
                             <div class="hotel-cost">{{a.cost}}</div>
                             <input type="submit" value="찜하기">
                             </form>
@@ -401,10 +397,8 @@
                     <div class="hotel-contain-right">
                         <h1>{{a.name}}</h1>
                         <div class="classfication">{{a.classfications}}</div>
-                        <div class="distance"></div>
-                        <div class="explain"></div>
-                        <p class="rate-and-review">👍{{a.rating}} {{a.distance}} {{a.address}}
-                            {{a.kind}} {{a.clean}} {{a.conv}}</p>
+                        <span>친절성:{{a.kind}}</span><span>청결성:{{a.clean}}</span><span>편의성:{{a.conv}}</span>
+                        <p class="rate-and-review">👍{{a.rating}} {{a.distance}} {{a.address}} </p>
                         <div class="hotel-cost">{{a.cost}}</div>
                         <input type="submit" value="찜하기">
                         </form>
@@ -476,6 +470,84 @@
             </div>
         </div>
     </div>
+    <footer class="footer" style="margin-top:56vh;">
+        <div class="footer-addr">
+            <div style="text-align:left">
+                <a class="footer-logo" onclick="location.href='/'">너와 나드리</a>
+            </div>
+            <h2>Contact</h2>
+
+            <address>
+                <div style="text-align:left">
+                    <a
+                        href="https://www.google.com/maps/place/%EC%A4%91%EB%B6%80%EB%8C%80%ED%95%99%EA%B5%90+%EA%B3%A0%EC%96%91%EC%BA%A0%ED%8D%BC%EC%8A%A4+%E4%B8%AD%E9%83%A8%E5%A4%A7%E5%AD%B8%E6%A0%A1+Joongbu+University/data=!4m5!3m4!1s0x357c943e1caccd2b:0x56404200ca89df47!8m2!3d37.713203!4d126.8900751">
+                        중부대학교 창의캠퍼스. 세종관 828호
+                    </a><br>
+                </div>
+
+                <a class="footer-btn">문의하기</a>
+            </address>
+        </div>
+
+        <ul class="footer-p">
+            <li class="p-item">
+                <h2 class="p-title">너와 나드리</h2>
+
+                <ul class="p-ul">
+                    <li>
+                        <p>김병찬</p>
+                    </li>
+
+                    <li>
+                        <p>정욱채</p>
+                    </li>
+
+                    <li>
+                        <p>한정우</p>
+                    </li>
+                </ul>
+            </li>
+
+            <li class="p-item">
+                <h2 class="p-title">사용기술</h2>
+
+                <ul class="p-ul">
+                    <li>
+                        <p>경험기반 추천받기</p>
+                    </li>
+
+                    <li>
+                        <p>테마기반 추천받기</p>
+                    </li>
+
+                    <li>
+                        <p>세션기반 추천받기</p>
+                    </li>
+                </ul>
+            </li>
+
+            <li class="p-item">
+                <h2 class="p-title">지도교수</h2>
+
+                <ul class="p-ul">
+                    <li>
+                        <p>김송강 교수</p>
+                    </li>
+
+                    <li>
+                        <p>황호진 교수</p>
+                    </li>
+
+                </ul>
+            </li>
+        </ul>
+
+        <div class="footer-sub">
+            <div class="sub-name">
+                <p>&copy; 2022 정보통신학과. 졸업작품 프로젝트.</p>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
