--- a/JZ-main/LL/myproject/beer/templates/beer/ver2.html
+++ b/JZ-main/LL/myproject/beer/templates/beer/ver2.html
@@ -74,9 +74,9 @@
             <a href="/">HOME</a>
             <a href="{% url 'beer:ver2_select'%}">EXPERIENCE</a>
             <a href="{% url 'beer:ver3_select'%}">THEME</a>
-            {% if login_session %}
+            {% if login_session%}
             <a href="{% url 'user:logout' %}"><button class="logout-btn">LOGOUT</button></a>
-            <a href="{% url 'beer:purpose' %}">Survey</button></a>
+            <a href="{% url 'beer:purpose' %}"><button class="logout-btn">Survey</button></a>
             {% else %}
             <a href="{% url 'user:login' %}"><button class="login-btn">LOGIN</button></a>
             <a href="{% url 'user:register' %}"><button class="join-btn">JOIN</button></a>
