#0529 /1544 #결과페이지 #페이지리로드 #푸터함수처리 #로그인/회원가입 #홈이미지 #상단네브바 #푸터세션X
전체적인수정

--- a/JZ-main/LL/myproject/beer/templates/beer/ver2.html
+++ b/JZ-main/LL/myproject/beer/templates/beer/ver2.html
@@ -71,19 +71,19 @@
 <body>
     <div class="nav-comtain">
         <nav>
-            <a href="/">HOME</a>
-            <a href="{% url 'beer:ver2_select'%}">EXPERIENCE</a>
-            <a href="{% url 'beer:ver3_select'%}">THEME</a>
-            {% if login_session%}
-            <a href="{% url 'user:logout' %}"><button class="logout-btn">LOGOUT</button></a>
-            <a href="{% url 'beer:purpose' %}"><button class="logout-btn">Survey</button></a>
-            {% else %}
-            <a href="{% url 'user:login' %}"><button class="login-btn">LOGIN</button></a>
-            <a href="{% url 'user:register' %}"><button class="join-btn">JOIN</button></a>
-            {% endif %}
-            <div id="indicator"></div>
+          <a href="/">HOME</a>
+          <a href="{% url 'beer:ver2_select'%}">EXPERIENCE</a>
+          <a href="{% url 'beer:ver3_select'%}">THEME</a>
+          {% if login_session%}
+          <a href="{% url 'user:logout' %}"><button class="logout-btn">LOGOUT</button></a>
+          <a href="{% url 'beer:purpose' %}">Survey</a>
+          {% else %}
+          <a href="{% url 'user:login' %}"><button class="login-btn">LOGIN</button></a>
+          <a href="{% url 'user:register' %}"><button class="join-btn">JOIN</button></a>
+          {% endif %}
+          <div id="indicator"></div>
         </nav>
-    </div>
+      </div>
     <br />
     <div class="header">
         <a class="header-a" onclick="location.href='/'">너와 나드리</a>
