--- a/JZ-main/LL/myproject/beer/static/css/style.css
+++ b/JZ-main/LL/myproject/beer/static/css/style.css
@@ -148,7 +148,7 @@ nav a:nth-child(5) {
     text-decoration: none !important;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-weight: bold;
-    padding: 10px 0;
+    padding: 10px 0 0 0;
     transition: 0.2s ease color;
 }
 
@@ -221,7 +221,7 @@ nav a:nth-child(5):after {
     bottom: 0;
     width: 30px;
     height: 3px;
-    background-color: #fff;
+    background-color: #f8f8ff;
     border-radius: 5px;
     transition: 0.2s ease left;
 }
@@ -275,6 +275,9 @@ nav a:nth-child(5):hover~#indicator {
     outline: 0;
     transition: 0.2s ease color;
 }
+.login-btn:hover{
+    color: #000;
+}
 
 .logout-btn {
     position: relative;
@@ -292,6 +295,9 @@ nav a:nth-child(5):hover~#indicator {
     outline: 0;
     transition: 0.2s ease color;
 }
+.logout-btn:hover{
+    color: #000;
+}
 
 .join-btn {
     position: relative;
@@ -307,6 +313,10 @@ nav a:nth-child(5):hover~#indicator {
     border: 0;
     outline: 0;
     transition: 0.2s ease color;
+}
+
+.join-btn:hover{
+    color: #000;
 }
 
 /*로그인,회원가입,로그아웃*/
