--- a/JZ-main/LL/myproject/beer/templates/beer/ver3.html
+++ b/JZ-main/LL/myproject/beer/templates/beer/ver3.html
@@ -70,7 +70,7 @@
       <a href="{% url 'beer:ver3_select'%}">THEME</a>
       {% if login_session%}
       <a href="{% url 'user:logout' %}"><button class="logout-btn">LOGOUT</button></a>
-      <a href="{% url 'beer:purpose' %}"><button class="logout-btn">Survey</button></a>
+      <a href="{% url 'beer:purpose' %}">Survey</a>
       {% else %}
       <a href="{% url 'user:login' %}"><button class="login-btn">LOGIN</button></a>
       <a href="{% url 'user:register' %}"><button class="join-btn">JOIN</button></a>
