--- a/JZ-main/LL/myproject/beer/templates/beer/ver_result.html
+++ b/JZ-main/LL/myproject/beer/templates/beer/ver_result.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% load humanize %}
 <!DOCTYPE html>
 <html lang="en">
 
@@ -18,6 +19,7 @@
     <script src="https://vjs.zencdn.net/7.1.0/video.js"></script>
     <script src="../../static/js/videojs-pannellum-plugin.js"></script>
     <script src="../../static/js/toggle.js"></script>
+
 
     <link rel="stylesheet" href={% static 'css/style.css' %}>
     <link rel="stylesheet" href={% static 'css/reset.css' %}>
@@ -62,6 +64,7 @@
                 <div>
                     <h1>첫 번째 추천 여행지는 {{ result.0 }} 입니다.</h1>
                 </div>
+
                 <div class="result-wrapper">
                     <img class="result-img" src="static/mg/place/{{ result.0 }}.jfif" alt="사진은 수집중입니다😢">
                     <h2 class="result-h2">
@@ -71,6 +74,10 @@
                     </h2>
                 </div>
                 <div id="toc-content2">
+                    {% for a in vr0 %}
+                    {% if a.vr != '' %}
+                    <iframe src="{{a.vr}}" loading="lazy" frameborder="0" width="90%" height="100%"></iframe>
+                    {% else %}
                     <video id="result0" class="video-js vjs-default-skin vjs-big-play-centered" controls preload="none"
                         style="width:50vw; height:55vh; margin:0 auto; display:block;" crossorigin="anonymous">
                         <source src="/static/md/{{result.0}}.webm" type="video/webm" />
@@ -91,7 +98,8 @@
 
                         </script>
                     </video>
-                    </h2>
+                    {% endif %}
+                    {% endfor %}
                 </div>
                 <form method="GET">
                     <div id="toc-content3">
@@ -123,8 +131,8 @@
                     <div class="classfication">{{a.classfications}}</div>
                     <span>친절성:{{a.kind}}</span><span>청결성:{{a.clean}}</span><span>편의성:{{a.conv}}</span>
                     <p class="rate-and-review">👍{{a.rating}} {{a.distance}} {{a.address}} </p>
-                    <div class="hotel-cost">{{a.cost}}</div>
-                    <input type="submit" value="찜하기">
+                    <div class="hotel-cost">{{a.cost|intcomma}}</div>
+                    <input type="submit" value="찜하기" class="restaurant-book">
                     </form>
                 </div>
                 <hr width="70%">
@@ -164,10 +172,11 @@
                     </div>
                     <div class="hotel-contain-right">
                         <h1>{{a.name}}</h1>
-                        <div class="classfication">{{a.classfications}}</div>
+                        <div class="classfication">{{a.classfication}}</div>
                         <p class="rate-and-address">💗{{a.rating}} 리뷰개수:{{a.review}} 📮주소 {{a.address}} </p>
-                        <p class="restaurant-hour">⏰영업시간{{a.explain}}</p>
-                        <div class="restaurant-book"><button type="submit">찜하기</button></div>
+                        <div class="restaurant-book"><button type="submit" class="restaurant-book">찜하기</button></div>
+                    </div>
+                </div>
             </form>
         </div>
         <hr width="70%">
@@ -209,6 +218,10 @@
                     </h2>
                 </div>
                 <div id="toc-content5">
+                    {% for a in vr1 %}
+                    {% if a.vr != '' %}
+                    <iframe src="{{a.vr}}" loading="lazy" frameborder="0" width="90%" height="100%"></iframe>
+                    {% else %}
                     <video id="result1" class="video-js vjs-default-skin vjs-big-play-centered" controls preload="none"
                         style="width:50vw; height:55vh; margin:0 auto; display:block;" crossorigin="anonymous">
                         <source src="/static/md/{{result.1}}.webm" type="video/webm" />
@@ -229,7 +242,8 @@
 
                         </script>
                     </video>
-                    </h2>
+                    {% endif %}
+                    {% endfor %}
                 </div>
                 <div>
                     <div id="toc-content6">
@@ -264,8 +278,8 @@
                             <div class="classfication">{{a.classfications}}</div>
                             <span>친절성:{{a.kind}}</span><span>청결성:{{a.clean}}</span><span>편의성:{{a.conv}}</span>
                             <p class="rate-and-review">👍{{a.rating}} {{a.distance}} {{a.address}} </p>
-                            <div class="hotel-cost">{{a.cost}}</div>
-                            <input type="submit" value="찜하기">
+                            <div class="hotel-cost">{{a.cost|intcomma}}</div>
+                            <input type="submit" value="찜하기"class="restaurant-book">
                             </form>
                         </div>
                         <hr width="70%">
@@ -304,12 +318,18 @@
                                     <a href='{{a.url}}'><img class="hotel-img" src="{{ a.img }}"
                                             alt="사진은 수집중입니다😢"></a><br><br>
                                 </div>
-                                <div class="hotel-contain-right">
-                                    <h1>{{a.name}}</h1>
-                                    <div class="classfication">{{a.classfications}}</div>
-                                    <p class="rate-and-address">💗{{a.rating}} 리뷰개수:{{a.review}} 📮주소 {{a.address}} </p>
-                                    <p class="restaurant-hour">⏰영업시간{{a.explain}}</p>
-                                    <div class="restaurant-book"><button type="submit">찜하기</button></div>
+                                <div class="hotel-contain">
+                                    <div class="hotel-contain-left">
+                                        <a href='{{a.url}}'><img class="hotel-img" src="{{ a.img }}"
+                                                alt="사진은 수집중입니다😢"></a><br><br>
+                                    </div>
+                                    <div class="hotel-contain-right">
+                                        <h1>{{a.name}}</h1>
+                                        <div class="classfication">{{a.classfication}}</div>
+                                        <p class="rate-and-address">💗{{a.rating}} 리뷰개수:{{a.review}} 📮주소 {{a.address}}</p>
+                                        <div class="restaurant-book"><button type="submit"class="restaurant-book">찜하기</button></div>
+                                    </div>
+                                </div>
                         </form>
                     </div>
                     <hr width="70%">
@@ -350,6 +370,10 @@
                 </h2>
             </div>
             <div id="toc-content8">
+                {% for a in vr2 %}
+                {% if a.vr != '' %}
+                <iframe src="{{a.vr}}" loading="lazy" frameborder="0" width="90%" height="100%"></iframe>
+                {% else %}
                 <video id="result2" class="video-js vjs-default-skin vjs-big-play-centered" controls preload="none"
                     style="width:50vw; height:55vh; margin:0 auto; display:block;" crossorigin="anonymous">
                     <source src="/static/md/{{result.2}}.webm" type="video/webm" />
@@ -359,15 +383,18 @@
                         a web browser that <a href="http://videojs.com/html5-video-support/" target="_blank">supports
                             HTML5 video</a>
                     </p>
+
                     <script>
                         videojs('result2', {
                             plugins: {
                                 pannellum: {}
                             }
                         });
+
                     </script>
                 </video>
-                </h2>
+                {% endif %}
+                {% endfor %}
             </div>
             <div>
                 <div id="toc-content9">
@@ -400,8 +427,8 @@
                         <div class="classfication">{{a.classfications}}</div>
                         <span>친절성:{{a.kind}}</span><span>청결성:{{a.clean}}</span><span>편의성:{{a.conv}}</span>
                         <p class="rate-and-review">👍{{a.rating}} {{a.distance}} {{a.address}} </p>
-                        <div class="hotel-cost">{{a.cost}}</div>
-                        <input type="submit" value="찜하기">
+                        <div class="hotel-cost">{{a.cost|intcomma}}</div>
+                        <input type="submit" value="찜하기" class="restaurant-book">
                         </form>
                     </div>
                     <hr width="70%">
@@ -443,10 +470,10 @@
                             </div>
                             <div class="hotel-contain-right">
                                 <h1>{{a.name}}</h1>
-                                <div class="classfication">{{a.classfications}}</div>
-                                <p class="rate-and-address">💗{{a.rating}} 리뷰개수:{{a.review}} 📮주소 {{a.address}} </p>
-                                <p class="restaurant-hour">⏰영업시간{{a.explain}}</p>
-                                <div class="restaurant-book"><button type="submit">찜하기</button></div>
+                                <div class="classfication">{{a.classfication}}</div>
+                                <p class="rate-and-address">💗{{a.rating}} 리뷰개수:{{a.review}} 📮주소 {{a.address}}</p>
+                                <div class="restaurant-book"><button type="submit"class="restaurant-book">찜하기</button></div>
+                            </div>
                     </form>
                 </div>
                 <hr width="70%">
@@ -471,81 +498,8 @@
             </div>
         </div>
     </div>
-    <footer class="footer" style="margin-top:56vh;">
-        <div class="footer-addr">
-            <div style="text-align:left">
-                <a class="footer-logo" onclick="location.href='/'">너와 나드리</a>
-            </div>
-            <h2>Contact</h2>
-
-            <address>
-                <div style="text-align:left">
-                    <a
-                        href="https://www.google.com/maps/place/%EC%A4%91%EB%B6%80%EB%8C%80%ED%95%99%EA%B5%90+%EA%B3%A0%EC%96%91%EC%BA%A0%ED%8D%BC%EC%8A%A4+%E4%B8%AD%E9%83%A8%E5%A4%A7%E5%AD%B8%E6%A0%A1+Joongbu+University/data=!4m5!3m4!1s0x357c943e1caccd2b:0x56404200ca89df47!8m2!3d37.713203!4d126.8900751">
-                        중부대학교 창의캠퍼스. 세종관 828호
-                    </a><br>
-                </div>
-
-                <a class="footer-btn">문의하기</a>
-            </address>
-        </div>
-
-        <ul class="footer-p">
-            <li class="p-item">
-                <h2 class="p-title">너와 나드리</h2>
-
-                <ul class="p-ul">
-                    <li>
-                        <p>김병찬</p>
-                    </li>
-
-                    <li>
-                        <p>정욱채</p>
-                    </li>
-
-                    <li>
-                        <p>한정우</p>
-                    </li>
-                </ul>
-            </li>
-
-            <li class="p-item">
-                <h2 class="p-title">사용기술</h2>
-
-                <ul class="p-ul">
-                    <li>
-                        <p>경험기반 추천받기</p>
-                    </li>
-
-                    <li>
-                        <p>테마기반 추천받기</p>
-                    </li>
-
-
-                </ul>
-            </li>
-
-            <li class="p-item">
-                <h2 class="p-title">지도교수</h2>
-
-                <ul class="p-ul">
-                    <li>
-                        <p>김송강 교수</p>
-                    </li>
-
-                    <li>
-                        <p>황호진 교수</p>
-                    </li>
-
-                </ul>
-            </li>
-        </ul>
-
-        <div class="footer-sub">
-            <div class="sub-name">
-                <p>&copy; 2022 정보통신학과. 졸업작품 프로젝트.</p>
-            </div>
-        </div>
+    <footer include-html={% static 'html/footer.html' %}>
+        <script>includeHTML();</script>
     </footer>
 </body>
 
